# Leet_Code

./: main.py  pyproject.toml  python_syntax.txt  python_technique.txt  t.py
Array(数组）/: 1762. Buildings With an Ocean View(medium).py  240. Search a 2D Matrix II (medium).py  283. Move Zeroes (easy).py  485. Max Consecutive Ones (easy).py  566. Reshape the Matrix (easy).py
Arrays and Strings/: 1. Two Sum (easy).py  11. Container With Most Water (medium).py  12. Integer to Roman (medium).py  13. Roman to Integer (easy).py  15. 3Sum (medium).py  16. 3Sum Closest (medium).py  165. Compare Version Numbers (medium).py  20. Valid Parentheses (easy).py  205. Isomorphic Strings (easy).py  238. Product of Array Except Self (medium).py  268. Missing Number (easy).py  273. Integer to English Words (hard).py  28. Implement strStr() (easy).py  3. Longest Substring Without Repeating Characters (medium).py  387. First Unique Character in a String (easy).py  42. Trapping Rain Water (hard).py  48. Rotate Image (medium).py  49. Group Anagrams (medium).py  647. Palindromic Substrings (medium).py  696. Count Binary Substrings (easy).py  76. Minimum Window Substring (hard).py  8. String to Integer (atoi) (medium).py  819. Most Common Word (easy).py  937. Reorder Data in Log Files (easy).py
Design/: 1570. Dot Product of Two Sparse Vectors(medium).py  528. Random Pick with Weight(medium).py
Divide and Conquer/: 241. Different Ways to Add Parentheses (medium).py  95. Unique Binary Search Trees II (medium).py
Dynamic Programming/: 1143. Longest Common Subsequence(medium).py  (+27 more)
(+141 files in other folders)
